--- a/pp-s4apps01/zbomupload/ui5-mock.yaml
+++ b/pp-s4apps01/zbomupload/ui5-mock.yaml
@@ -1,5 +1,3 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: pp.zbomupload
@@ -9,14 +7,14 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false
         ui5:
           path:
             - /resources
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - authenticationType: reentranceTicket # SAML support for vscode
+          - authenticationType: SAMLAssertion
             path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing
@@ -31,7 +29,7 @@ server:
       configuration:
         mountPath: /
         services:
-          - urlPath: /sap/opu/odata/sap/ZUI_BOMUPLOAD_O2
+          - urlPath: /sap/opu/odata4/sap/zui_bomupload_o4/srvd/sap/zui_bomupload_o4/0001/
             metadataPath: ./webapp/localService/metadata.xml
             mockdataPath: ./webapp/localService/data
             generateMockData: true
