BC - Fiori Apps

--- a/bc-s4apps01/zdtimpconf/webapp/manifest.json
+++ b/bc-s4apps01/zdtimpconf/webapp/manifest.json
@@ -126,7 +126,7 @@
           "name": "sap.fe.templates.ListReport",
           "options": {
             "settings": {
-              "contextPath": "/Configuration",
+              "entitySet": "Configuration",
               "variantManagement": "Page",
               "navigation": {
                 "Configuration": {
@@ -152,7 +152,7 @@
           "options": {
             "settings": {
               "editableHeaderContent": false,
-              "contextPath": "/Configuration"
+              "entitySet": "Configuration"
             }
           }
         }
