--- a/bc-s4apps01/zdtimpfiles/webapp/manifest.json
+++ b/bc-s4apps01/zdtimpfiles/webapp/manifest.json
@@ -126,7 +126,7 @@
           "name": "sap.fe.templates.ListReport",
           "options": {
             "settings": {
-              "contextPath": "/Files",
+              "entitySet": "Files",
               "variantManagement": "Page",
               "navigation": {
                 "Files": {
@@ -152,7 +152,7 @@
           "options": {
             "settings": {
               "editableHeaderContent": false,
-              "contextPath": "/Files"
+              "entitySet": "Files"
             }
           }
         }
