--- a/pp-s4apps01/zbomupload/webapp/manifest.json
+++ b/pp-s4apps01/zbomupload/webapp/manifest.json
@@ -58,7 +58,7 @@
         }
     },
     "sap.ui5": {
-        "flexEnabled": true,
+        "flexEnabled": false,
         "dependencies": {
             "minUI5Version": "1.120.17",
             "libs": {
@@ -143,5 +143,8 @@
     "sap.cloud": {
         "public": true,
         "service": "pp-s4apps01"
+    },
+    "sap.platform.cf": {
+        "ui5VersionNumber": "1.120.18"
     }
 }
