--- a/pp-s4apps01/zbomupload/webapp/manifest.json
+++ b/pp-s4apps01/zbomupload/webapp/manifest.json
@@ -21,7 +21,16 @@
                 "type": "OData",
                 "settings": {
                     "annotations": [],
-                    "localUri": "localService/metadata.xml",
+                    "localUri": "localService/mainService/metadata.xml",
+                    "odataVersion": "4.0"
+                }
+            },
+            "zui_dtimp_conf_o4": {
+                "uri": "/sap/opu/odata4/sap/zui_dtimp_conf_o4/srvd/sap/zui_dtimp_conf_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
                     "odataVersion": "4.0"
                 }
             }
@@ -59,6 +68,9 @@
     },
     "sap.ui5": {
         "flexEnabled": false,
+        "config": {
+            "fullWidth": true
+        },
         "dependencies": {
             "minUI5Version": "1.120.17",
             "libs": {
@@ -95,6 +107,16 @@
             "@i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "uri": "i18n/i18n.properties"
+            },
+            "Attach": {
+                "dataSource": "zui_dtimp_conf_o4",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
+                }
             }
         },
         "resources": {
