20240826 MM-009 供給元一覧一括登録

--- a/mm-s4apps01/sourcelistupload/ui5-mock.yaml
+++ b/mm-s4apps01/sourcelistupload/ui5-mock.yaml
@@ -1,5 +1,3 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: mm.sourcelistupload
@@ -9,7 +7,7 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false
         ui5:
           path:
             - /resources
@@ -30,7 +28,11 @@ server:
         mountPath: /
         services:
           - urlPath: /sap/opu/odata4/sap/zui_purchasingsourcelist_o4/srvd/sap/zui_purchasingsourcelist_o4/0001
-            metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/data
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/mainService/metadata.xml
+            mockdataRootPath: ./webapp/localService/data
+          - urlPath: /sap/opu/odata4/sap/zui_purchasingsourcelist_o4/srvd/sap/zui_purchasingsourcelist_o4/0001/
+            metadataPath: ./webapp/localService/mainService/metadata.xml
+            mockdataPath: ./webapp/localService/mainService/mockdata
             generateMockData: true
         annotations: []
