--- a/mm-s4apps01/purinforecordchange/webapp/manifest.json
+++ b/mm-s4apps01/purinforecordchange/webapp/manifest.json
@@ -29,25 +29,25 @@
         "uri": "/sap/opu/odata4/sap/zui_dtimp_conf_o4/srvd/sap/zui_dtimp_conf_o4/0001/",
         "type": "OData",
         "settings": {
-            "annotations": [],
-            "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
-            "odataVersion": "4.0"
+          "annotations": [],
+          "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
+          "odataVersion": "4.0"
         }
       }
     },
     "crossNavigation": {
-			"inbounds": {
-				"sourcelistupload-display": {
+      "inbounds": {
+        "sourcelistupload-display": {
           "semanticObject": "purinforecordchange",
           "action": "display",
           "title": "{{flpTitle}}",
           "icon": "sap-icon://upload",
           "signature": {
-             "parameters": {},
-             "additionalParameters": "allowed"
-				  }
-			  }
-		  }
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.platform.cf": {
@@ -107,6 +107,16 @@
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "uri": "i18n/i18n.properties"
+      },
+      "Attach": {
+        "dataSource": "zui_dtimp_conf_o4",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
       }
     },
     "resources": {
