--- a/pp-s4apps01/zproductionversionupload/webapp/manifest.json
+++ b/pp-s4apps01/zproductionversionupload/webapp/manifest.json
@@ -33,6 +33,15 @@
           "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "PrintService": {
+        "uri": "/sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PRT_RECORD_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -110,6 +119,16 @@
       },
       "Attach": {
         "dataSource": "zui_dtimp_conf_o4",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
+      "Print": {
+        "dataSource": "PrintService",
         "preload": true,
         "settings": {
           "synchronizationMode": "None",
