--- a/pp-s4apps01/zofsplitrule/webapp/manifest.json
+++ b/pp-s4apps01/zofsplitrule/webapp/manifest.json
@@ -42,6 +42,15 @@
           "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "PrintService": {
+        "uri": "/sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PRT_RECORD_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -122,6 +131,16 @@
       "local": {
         "type": "sap.ui.model.json.JSONModel",
         "preload": true
+      },
+      "Print": {
+        "dataSource": "PrintService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
       }
     },
     "resources": {
@@ -160,7 +179,9 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "ResponsiveTable"
+                    "type": "GridTable",
+                    "selectionMode": "Multi",
+                    "selectAll": true
                   },
                   "actions": {
                     "upload": {
