PP-013 OF分割ルールマスタ管理

--- a/pp-s4apps01/zofsplitrule/webapp/manifest.json
+++ b/pp-s4apps01/zofsplitrule/webapp/manifest.json
@@ -179,9 +179,7 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "GridTable",
-                    "selectionMode": "Multi",
-                    "selectAll": true
+                    "type": "ResponsiveTable"
                   },
                   "actions": {
                     "upload": {
