--- a/mm-s4apps01/mta.yaml
+++ b/mm-s4apps01/mta.yaml
@@ -59,6 +59,10 @@ modules:
       - mmpochange.zip
       name: mmpochange
       target-path: resources/
+    - artifacts:
+      - mmpoacceptance.zip
+      name: mmpoacceptance
+      target-path: resources/
 - name: mmsourcelistupload
   type: html5
   path: sourcelistupload
@@ -93,6 +97,16 @@ modules:
     build-result: dist
     builder: custom
     commands:
+    - npm run build:cf
+    supported-platforms: []
+- name: mmpoacceptance
+  type: html5
+  path: poacceptance
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
     - npm run build:cf
     supported-platforms: []
 resources:
