PP-020 メール送信マスタ管理

--- a/pp-s4apps01/zemailmasterupload/webapp/manifest.json
+++ b/pp-s4apps01/zemailmasterupload/webapp/manifest.json
@@ -41,6 +41,7 @@
           "semanticObject": "zemailmasterupload",
           "action": "display",
           "title": "{{flpTitle}}",
+          "icon": "sap-icon://request",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
