PP-013 OF分割ルールマスタ管理

--- a/pp-s4apps01/zofsplitrule/webapp/manifest.json
+++ b/pp-s4apps01/zofsplitrule/webapp/manifest.json
@@ -59,6 +59,7 @@
           "semanticObject": "zofsplitrule",
           "action": "display",
           "title": "{{flpTitle}}",
+          "icon": "sap-icon://request",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
