--- a/pp-s4apps01/zorderforecastupload/ui5-local.yaml
+++ b/pp-s4apps01/zorderforecastupload/ui5-local.yaml
@@ -25,7 +25,7 @@ server:
       configuration:
         ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
-          - authenticationType: reentranceTicket # SAML support for vscode
+          - authenticationType: SAMLAssertion # SAML support for vscode
             path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing
