--- a/fico-s4apps01/mta.yaml
+++ b/fico-s4apps01/mta.yaml
@@ -33,6 +33,30 @@ modules:
         existing_destinations_policy: update
   build-parameters:
     no-source: true
+- name: fico-s4apps01-app-content
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: fico-s4apps01-repo-host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - ficopaidpay.zip
+      name: ficopaidpay
+      target-path: resources/
+- name: ficopaidpay
+  type: html5
+  path: paidpay
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
 resources:
 - name: fico-s4apps01-uaa
   type: org.cloudfoundry.managed-service
